Merge remote-tracking branch 'origin/master'
# Conflicts:
#	testSrc/SprockellTest.java